{{$NEXT}}

0.65     2016-07-04

- Avoid warnings when t/ directory contains non-UTF8 data.


0.64     2016-06-26

- If the distro uses Test2 modules, the Test::More prereq is now set to
  1.302015 instead of 0.96. Suggested by Graham Knop.


0.63     2016-06-17

- Small tweak to generated perlcriticrc.


0.62     2016-06-12

- Only run PromptIfStale for release phase.


0.61     2016-06-05

- Don't include GitHub::Meta when running under Travis.


0.60     2016-06-04

- Don't include PromptIfStale when running under Travis. It's not like I can
  stop the build and update prereqs anyway.


0.59     2016-05-30

- Make the generated tidyall.ini only use Test::Vars on modules. It ends up
  running code that it checks, so if you run it on .t files it actually runs
  them, causing all sorts of problems with the tidyall tests.


0.58     2016-05-29

- Set the minimum_perl for the Test::Tidyall plugin to 5.10 since Test::Vars
  requires that version.


0.57     2016-05-28

- Move stale module check to build phase.


0.56     2016-05-21

- Add the Test::Vars tidyall plugin to my default tidyall.ini.


0.55     2016-05-18

- Fix handling of regexes in "exclude" config values.


0.54     2016-05-18

- Fix check for XS to check outside of the top-level dir.


0.53     2016-05-08

- Add psgi to program-extensions in perlcriticrc.


0.52     2016-05-06

- Set program-extensions in perlcriticrc.


0.51     2016-05-06

- Make sure we set argv for all PerlCritic & PerlTidy sections when munging
  tidyall.ini.


0.50     2016-04-25

- Always make the Test::TidyAll plugin verbose. There's no downside to seeing
  diffs on tidy failures.


0.49     2016-04-24

- When adding Perl::Critic and Perl::Tidy to development prereqs, ask for the
  latest versions.


0.48     2016-04-24

- Only include the DONATIONS pod section for distros where I am the copyright
  holder.


0.47     2016-04-11

- Revert changes in 0.46 that required a recent Perl. This makes testing on