@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+- Implemented a rather convoluted way of passing config into my Pod::Weaver
+  bundle in order to allow for disabling the DONATIONS pod section on a
+  per-distro basis.
+
+
 0.65     2016-07-04
 
 - Avoid warnings when t/ directory contains non-UTF8 data.
